[tool.poetry]
name = "fullwave_simulation"
version = "0.1.0"
description = ""
authors = ["Masashi Sode <masashi.sode@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11.5"
numpy = "^1.25.2"
pandas = "^2.1.0"
tqdm = "^4.66.1"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
imutils = "^0.5.4"
joblib = "^1.3.2"
seaborn = "^0.12.2"
opencv-python = "^4.8.0.76"
scipy = "^1.11.2"
matlabengine = "^9.15.2"
scikit-image = "^0.22.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
autopep8 = "^2.0.4"
mypy = "^1.5.1"
pudb = "^2022.1.3"
pytest = "^7.4.1"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
